--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="caiquecoelho.com.gasolina">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <application
         android:allowBackup="true"
@@ -8,22 +7,38 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            >
+            android:name=".Login"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AbastecerActivity" android:exported="true" />
-        <activity android:name=".CarroActivity" android:exported="true" />
-        <activity android:name=".HistoricoActivity" android:exported="true" />
-        <activity android:name=".DetalhesAbastecimentoActivity" android:exported="true" />
-
+        <activity
+            android:name=".LoginOneTap"
+            android:exported="true"
+            android:label="@string/title_activity_login"
+            android:theme="@style/AppTheme" >
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" >
+        </activity>
+        <activity
+            android:name=".AbastecerActivity"
+            android:exported="true" />
+        <activity
+            android:name=".CarroActivity"
+            android:exported="true" />
+        <activity
+            android:name=".HistoricoActivity"
+            android:exported="true" />
+        <activity
+            android:name=".DetalhesAbastecimentoActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
